Resolved overlaping issue with tooltip and removed commented code from j

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -151,7 +151,7 @@ h4 {
 
   /* Position the tooltip */
   position: absolute;
-  z-index: 1;
+  z-index: 4;
 }
 
 .tooltip:hover .tooltiptext {
